<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal"
    >

        <TextView android:id="@+id/productIDLabel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/product_id"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>

        <TextView android:id="@+id/productIDValue"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal">

        <TextView android:id="@+id/productNameLabel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/product_name"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>

        <TextView android:id="@+id/productNameValue"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal">

        <TextView android:id="@+id/taxLabel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/tax"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>

        <TextView android:id="@+id/taxValue"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal">

        <TextView android:id="@+id/colorLabel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/colors"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>

        <TextView android:id="@+id/sizesLabel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/sizes"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>

        <TextView android:id="@+id/priceLabel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text=""
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:orientation="vertical"
                  android:id="@+id/llrow_layout">
    </LinearLayout>
</LinearLayout>